# wf-dynspaces

./: README.md  dynspaces.cpp  dynspaces.xml  meson.build
